--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 main {
     width: 100%;
-    background: #000 url(../img/background/main-screen__bgc.jpg) 0 0/cover no-repeat;
+    background: #000 url(../img/background/main-screen__bgc.jpg) 0 0 / cover no-repeat;
 }
 .nav {
     padding: 40px 80px 190px 40px;
@@ -17,7 +17,7 @@ main {
 }
 .login {
     padding: 10px 30px;
-    background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
+    background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
     border-radius: 50px;
     color: #ffffff;
 }
@@ -43,7 +43,6 @@ li a {
     line-height: 90px;
 }
 .timer {
-
     margin-bottom: 220px;
     display: grid;
     grid-template-columns: 115px 115px 115px 115px;
@@ -60,8 +59,64 @@ li a {
     font-size: 36px;
     line-height: 140%;
 }
-.timer__time p{
+.timer__time p {
     font-size: 16px;
     line-height: 140%;
     opacity: 0.4;
+}
+
+.main-sales {
+    display: flex;
+    height: 130px;
+    justify-content: space-between;
+    align-items: center;
+    background: #121212;
+}
+
+.level {
+    margin: 4px 0 16px;
+    padding: 0;
+    height: 6px;
+    font-size: 0;
+    background-color: #fff;
+    border: 1px solid #712073;
+}
+
+.level div {
+    margin: 0;
+    height: 6px;
+    background: linear-gradient(94.78deg, #DF5950 11.19%, #451046 93.72%);
+    
+}
+.main-sales__button {
+    margin-left: 15%;
+}
+.main-sales__button a {
+    background: linear-gradient(94.78deg, #df5950 11.19%, #451046 93.72%);
+    border-radius: 50px;
+    padding: 10px 30px;
+    color: #fff;
+}
+tr td:last-of-type {
+    padding-left: 30px;
+}
+.text-opacity {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color: #ffffff;
+    opacity: 0.4;
+}
+.main-sales__money {
+    width: 30%;
+    margin-right: 15%;
+}
+.skill-html span {
+    padding-left: 30px;
+}
+.main-sales__money_flex {
+display: flex;
+justify-content: space-between;
 }
