--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,9 @@ tr td:last-of-type {
     width: 30%;
     margin-right: 10%;
 }
+.skill-html > span {
+    opacity: 0.4;
+}
 .skill-html span {
     color: #fff;
     opacity: 1.4;
@@ -143,5 +146,68 @@ tr td:last-of-type {
     font-size: 16px;
     line-height: 26px;
 }
-.doing-img {
+.fast-start {
+    width: 80%;
+    margin: 0 auto 200px;
+}
+.faststart__block {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.faststart__block h2 {
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 140%;
+    padding: auto 0;
+}
+.fast-start p:nth-child(2) {
+    font-size: 16px;
+    line-height: 160%;
+    opacity: 0.5;
+    margin: 0 0 80px 0;
+}
+.percetence {
+    display: flex;
+}
+.percetence__block div {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+    border: none;
+}
+.percetence__block:nth-of-type(2) div {
+    height: 60px;
+    margin: 10px 0;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+.percetence__block:nth-of-type(3) div {
+    height: 30px;
+    margin: 25px 0;
+    background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+}
+.percetence__block:nth-of-type(4) div {
+    height: 10px;
+    margin: 35px 0;
+    background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+.percetence__block h3 {
+    display: block;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 140%;
+}
+.percetence__block p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 160%;
+    opacity: 0.5;
 }
