--- a/css/nullstyle.css
+++ b/css/nullstyle.css
@@ -1,23 +1,39 @@
 /* очистить все границы и отступы*/
-*{
+* {
     padding: 0;
     margin: 0;
     border: 0;
 }
 /* изменение подсчета ширины блока для удобной верстки*/
-*,*:before,*:after{
+*,
+*:before,
+*:after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 /* убрать линии обводки у некоторых браузеров*/
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
+:focus,
+:active {
+    outline: none;
+}
+a:focus,
+a:active {
+    outline: none;
+}
 /*делает теги блочными*/
-nav,footer,header,aside{display: block;}
-
+nav,
+footer,
+header,
+aside {
+    display: block;
+}
+a {
+    display: inline-block;
+}
 /*одинаковое поведение шрифтов для разных браузеров*/
-html,body{
+html,
+body {
     height: 100%;
     width: 100%;
     font-size: 100%;
@@ -29,16 +45,44 @@ html,body{
 }
 
 /*наследование семейство шрифта для "особенных" тегов*/
-input,button, textarea{font-family: inherit;}
+input,
+button,
+textarea {
+    font-family: inherit;
+}
 
 /* убирают лишнее в отображении в разных браузерах*/
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner{padding: 0;border: 0;}
-a,a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
+input::-ms-clear {
+    display: none;
+}
+button {
+    cursor: pointer;
+}
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+a,
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+ul li {
+    list-style: none;
+}
+img {
+    vertical-align: top;
+}
 
 /* обнуление заголовкков*/
-h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: inherit;
+    font-weight: 400;
+}
