--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,10 @@ tr td:last-of-type {
     line-height: 160%;
 }
 .mentors {
-    margin: 0 10% 200px;
+    margin: 0 10% 100px;
+}
+.mentors img {
+    margin: 0 35px 0 0;
 }
 .mentors h2 {
     display: inline;
@@ -406,15 +409,34 @@ tr td:last-of-type {
     line-height: 140%;
     margin-bottom: 100px;
 }
+.mentor {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    text-align: center;
+}
+.mentor div {
+    max-width: 350px;
+}
+.mentor img {
+    border-radius: 50%;
+    background: #000;
+    margin-bottom: 40px;
+}
 .mentor h3 {
     font-weight: 500;
     font-size: 24px;
     line-height: 140%;
+    margin-bottom: 15px;
 }
 .mentor p {
     font-size: 16px;
     line-height: 160%;
     opacity: 0.8;
+    margin-bottom: 30px;
 }
 .mentor a {
     align-items: center;
@@ -423,11 +445,5 @@ tr td:last-of-type {
     box-sizing: border-box;
     border-radius: 50px;
     color: #fff;
+}
 
-}
-.mentor {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
