--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,549 @@
-//файл обнуляющих стилей
-@import "nullstyle.scss";
+body {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0) url(../img/background/bg_all_page.jpg) 0 0 repeat;
+}
+
+main {
+  width: 100%;
+  background: #000 url(../img/background/main-screen__bgc.jpg) 0 0 / cover no-repeat;
+}
+
+.nav {
+  position: sticky;
+  padding: 40px 80px 190px 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login {
+  position: absolute;
+  content: "";
+  right: 30px;
+  padding: 10px 30px;
+  background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+  border-radius: 50px;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+
+.login:hover {
+  padding: 20px 30px;
+}
+
+.logo {
+  position: absolute;
+  content: "";
+  left: 30px;
+}
+
+.nav ul {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+li a {
+  color: #fff;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.main h1 {
+  margin-bottom: 50px;
+  max-width: 920px;
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 90px;
+}
+
+.timer {
+  margin-bottom: 220px;
+  display: grid;
+  grid-template-columns: 115px 115px 115px 115px;
+  gap: 30px;
+}
+
+.timer__time {
+  padding: 20px 0;
+  background: #121212;
+  text-align: center;
+  vertical-align: center;
+}
+
+.timer__time h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 140%;
+}
+
+.timer__time p {
+  font-size: 16px;
+  line-height: 140%;
+  opacity: 0.4;
+}
+
+.main-sales {
+  display: flex;
+  height: 130px;
+  justify-content: space-between;
+  align-items: center;
+  background: #121212;
+  margin-bottom: 200px;
+}
+
+.level {
+  margin: 4px 0 16px;
+  padding: 0;
+  height: 6px;
+  font-size: 0;
+  background-color: #fff;
+  border: 1px solid #712073;
+}
+
+.level div {
+  margin: 0;
+  height: 6px;
+  background: linear-gradient(94.78deg, #df5950 11.19%, #451046 93.72%);
+}
+
+.main-sales__button {
+  margin-left: 10%;
+}
+
+.main-sales__button a {
+  background: linear-gradient(94.78deg, #df5950 11.19%, #451046 93.72%);
+  border-radius: 50px;
+  padding: 10px 30px;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+.main-sales__button a:hover {
+  padding: 20px 30px;
+}
+
+tr td:last-of-type {
+  padding-left: 30px;
+}
+
+.text-opacity {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+  color: #ffffff;
+  opacity: 0.4;
+}
+
+.main-sales__money {
+  width: 30%;
+  margin-right: 10%;
+}
+
+.skill-html>span {
+  opacity: 0.4;
+}
+
+.skill-html span {
+  color: #fff;
+  opacity: 1.4;
+  padding-left: 30px;
+}
+
+.main-sales__money_flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.doing {
+  max-width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  column-gap: 100px;
+  margin-bottom: 200px;
+}
+
+.doing-img {
+  flex-basis: 40%;
+}
+
+.doing-text {
+  flex-basis: 40%;
+}
+
+.doing-h {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 67px;
+  margin: 45px 0;
+}
+
+.doing-p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.fast-start {
+  width: 80%;
+  margin: 0 auto 200px;
+}
+
+.faststart__block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.faststart__block h2 {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 140%;
+  padding: auto 0;
+}
+
+.fast-start p:nth-child(2) {
+  font-size: 16px;
+  line-height: 160%;
+  opacity: 0.5;
+  margin: 0 0 80px 0;
+}
+
+.percetence {
+  display: flex;
+}
+
+.percetence__block div {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  height: 80px;
+  background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+  border: none;
+}
+
+.percetence__block:nth-of-type(2) div {
+  height: 60px;
+  margin: 10px 0;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.percetence__block:nth-of-type(3) div {
+  height: 30px;
+  margin: 25px 0;
+  background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+}
+
+.percetence__block:nth-of-type(4) div {
+  height: 10px;
+  margin: 35px 0;
+  background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.percetence__block h3 {
+  display: block;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 140%;
+}
+
+.percetence__block p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160%;
+  opacity: 0.5;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-areas:
+    "head head head"
+    "ione itwo itree"
+    "hone htwo htree"
+    "pone ptwo ptree";
+  row-gap: 30px;
+  column-gap: 50px;
+  text-align: center;
+  margin: 0 10% 200px;
+}
+
+.about h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 140%;
+  margin-bottom: 60px;
+}
+
+.about h3 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 140%;
+}
+
+.about p {
+  font-size: 16px;
+  line-height: 160%;
+  text-align: center;
+  color: #ffffff;
+  opacity: 0.8;
+}
+
+.about img {
+  margin: 0 auto;
+}
+
+.main_h {
+  grid-area: head;
+}
+
+.imgpc {
+  grid-area: ione;
+}
+
+.skill {
+  grid-area: hone;
+}
+
+.pone {
+  grid-area: pone;
+}
+
+.imgusb {
+  grid-area: itwo;
+}
+
+.equipment {
+  grid-area: htwo;
+}
+
+.ptwo {
+  grid-area: ptwo;
+}
+
+.imgcable {
+  grid-area: itree;
+}
+
+.sertificate {
+  grid-area: htree;
+}
+
+.pthree {
+  grid-area: ptree;
+}
+
+.partner {
+  margin: 0 10% 60px 10%;
+}
+
+.partner h2 {
+  display: inline;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 140%;
+  margin-bottom: 60px;
+}
+
+.partner img {
+  margin-right: 20px;
+}
+
+.msi_one,
+.msi_two {
+  display: flex;
+  flex-wrap: nowrap;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.msiimg img {
+  width: 25%;
+  padding: 29px 66px;
+  object-fit: cover;
+}
+
+.msi_one img {
+  border-bottom: 1px solid rgb(100%, 100%, 100%, 0.3);
+  border-right: 1px solid rgb(100%, 100%, 100%, 0.3);
+}
+
+.msi_one img:last-child {
+  border-right: none;
+}
+
+.msi_two img:not(:last-child) {
+  border-right: 1px solid rgb(100%, 100%, 100%, 0.3);
+}
+
+.msi_two {
+  margin-bottom: 150px;
+}
+
+.learning {
+  width: 750px;
+  margin: 0 auto 170px;
+  text-align: center;
+}
+
+.learning img {
+  margin-bottom: 30px;
+}
+
+.learning h2 {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+
+.learning p {
+  font-size: 16px;
+  line-height: 160%;
+  color: rgb(100%, 100%, 100%, 0.5);
+  margin-bottom: 80px;
+}
+
+.steps {
+  display: grid;
+  grid-template-columns: 377px 6px 377px;
+}
+
+.border {
+  background: linear-gradient(94.26deg, #c89afc 9.51%, #7c6afa 90.23%);
+}
+
+.leftweak {
+  text-align: right;
+  margin-bottom: 60px;
+  display: grid;
+  column-gap: 0;
+  grid-template-columns: 337px 40px;
+  grid-template-rows: 40px 40px;
+}
+
+.leftweak div:first-of-type {
+  border-bottom: 1px solid #ffffff;
+  opacity: 0.3;
+  grid-column: 2 /3;
+  grid-row: 1 /1;
+}
+
+.rightsection {
+  position: relative;
+  top: 65px;
+}
+
+.rightweak {
+  text-align: left;
+  margin-top: auto;
+  margin-bottom: 60px;
+  display: grid;
+  column-gap: 0;
+  grid-template-columns: 40px 337px;
+  grid-template-rows: 40px 40px;
+}
+
+.rightweak div:first-of-type {
+  border-bottom: 1px solid #ffffff;
+  opacity: 0.3;
+  grid-column: 1 /1;
+  grid-row: 1 /1;
+}
+
+.rightweak div:last-of-type {
+  grid-column: 1 /1;
+  grid-row: 2 /3;
+}
+
+.left-section p,
+.rightsection p {
+  font-size: 14px;
+  line-height: 160%;
+  opacity: 0.5;
+}
+
+.left-section h3,
+.rightsection h3 {
+  font-size: 18px;
+  line-height: 160%;
+}
+
+.mentors {
+  margin: 0 10% 100px;
+}
+
+.mentors img {
+  margin: 0 35px 0 0;
+}
+
+.mentors h2 {
+  display: inline;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 140%;
+  margin-bottom: 100px;
+}
+
+.mentor {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.mentor div {
+  max-width: 350px;
+}
+
+.mentor img {
+  border-radius: 50%;
+  background: #000;
+  margin-bottom: 40px;
+}
+
+.mentor h3 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 140%;
+  margin-bottom: 15px;
+}
+
+.mentor p {
+  font-size: 16px;
+  line-height: 160%;
+  opacity: 0.8;
+  margin-bottom: 30px;
+}
+
+.mentor a {
+  align-items: center;
+  padding: 10px 30px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 50px;
+  color: #fff;
+}
